--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "phpbench/phpbench": "^1.3"
     },
     "autoload": {
         "classmap": ["src/"]
@@ -24,6 +25,7 @@
         }
     },
     "scripts": {
-        "test": "phpunit"
+        "test": "phpunit",
+        "bench": "phpbench run tests/Benchmark --report=default"
     }
 }
