--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['8.0', '8.1']
+        php-versions: ['8.0', '8.1', '8.2']
     steps:
       - uses: actions/checkout@v2
 
@@ -39,3 +39,6 @@ jobs:
 
       - name: Run test suite
         run: composer run-script test
+
+      - name: Run benchmarks
+        run: composer run-script bench
